tests/ui/extern-flag/no-nounused.stderr
error: extern crate `somedep` is unused in crate `no_nounused`
  --> $DIR/no-nounused.rs:5:1
   |
LL | fn main() {
   | ^
   |
   = help: remove the dependency or add `use somedep as _;` to the crate root
   = note: requested on the command line with `-D unused-crate-dependencies`

error: aborting due to 1 previous error

